# scorecard-tracing-demo

./: .gitignore  README.md  demo.code-workspace  helper.py  main.py  pyproject.toml
environment/: openai_config.py  scorecard_config.py
node/: .gitignore  README.md  index.cjs  index.js  index.mjs  package-lock.json  package.json  pnpm-lock.yaml  setup.js  test.mjs
python/: README.md  main.py  pyproject.toml
python/environment/: dotenv.py  scorecard_config.py  validate.py  validated_settings.py
