[tool.poetry]
name = "scorecard-tracing-demo"
version = "0.1.0"
description = ""
authors = ["Scorecard AI <team@getscorecard.ai>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openai = "^1.21.2"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
scorecard-ai = {version = "^1.0.0b5", extras = ["telemetry", "instrument-openai"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
